# wav-splitter

./: .gitignore  .~lock.README.md#  CMakeLists.txt  README.md  main.c  processing-utils.c  processing-utils.h  wav-header.c  wav-header.h  wav-splitter.c  wav-splitter.h
.github/workflows/: build-release.yml
include/: processing-utils.h  processing.h  utils.h  wav-header.h
scripts/linux/: bootstrap.sh  build.sh  clean.sh  cleanbuild.sh  release_deb.sh  release_tar.sh
scripts/windows/: build.ps1  clean.ps1  cleanbuild.ps1  release_zip_win.ps1
src/: main.c  processing-utils.c  processing.c  utils.c  wav-header.c
